--- a/myapp/templates/user/user_list.html
+++ b/myapp/templates/user/user_list.html
@@ -134,7 +134,7 @@
         <a href="{% url 'customer_list' %}"><span class="icon">👤</span> Customer Hub</a>
         <a href="{% url 'booking_list' %}"><span class="icon">📦</span> Booking Hub</a>
         <a href="{% url 'container_list' %}"><span class="icon">🚛</span> Container Hub</a>
-        <a href="#"><span class="icon">👥</span> Driver</a>
+        <a href="{% url 'driver_list' %}"><span class="icon">👥</span> Driver</a>
         <a href="{% url 'user_list' %}" class="active"><span class="icon">👤</span> User Hub</a>
         <a href="#"><span class="icon">🔒</span> Security</a>
         <a href="#"><span class="icon">🔔</span> Notification</a>
