--- a/myapp/templates/booking/booking_form.html
+++ b/myapp/templates/booking/booking_form.html
@@ -168,10 +168,15 @@
       <div class="card-body">
         <form method="POST" class="form-horizontal">
           {% csrf_token %}
-          <div class="form-group">
-            <label for="id_booking_number">Booking Number</label>
-            {{ form.booking_number }}
-          </div>
+            <div class="form-group">
+                <label for="id_booking_number_display">Booking Number
+                {{ form.booking_number }}
+                </label>
+            </div>
+            <div class="form-group">
+                <label for="id_created_by">Created by</label>
+                <input type="text" disabled="true" id="id_created_by" value="{{ request.user.username }}" readonly class="form-control" />
+            </div>
           <div class="form-group">
             <label for="id_customer">Customer</label>
             {{ form.customer }}
@@ -183,10 +188,6 @@
           <div class="form-group">
             <label for="id_destination">Destination</label>
             {{ form.destination }}
-          </div>
-          <div class="form-group">
-            <label for="id_created_by">Created by</label>
-            {{ form.created_by }}
           </div>
           <div class="form-group">
             <label for="id_status">Status</label>
