--- a/myapp/templates/customers/customer_list.html
+++ b/myapp/templates/customers/customer_list.html
@@ -288,6 +288,11 @@
                 <th>Address</th>
                 <th>Actions</th>
                 <th>
+{#                    <form method="POST" action="{% if customer.pk %}{% url 'customer_update' customer.pk %}{% else %}{% url 'customer_create' %}{% endif %}">#}
+{#                        {% csrf_token %}#}
+{#                        {{ form.as_p }}#}
+{#                        <button type="submit" class="add-button">{% if customer.pk %}Update{% else %}Create{% endif %} Customer</button>#}
+{#                    </form>#}
                     <a href="{% url 'customer_create' %}" class="add-button">Add</a>
                 </th>
             </tr>
